--- a/manifest.json
+++ b/manifest.json
@@ -2,36 +2,37 @@
   "name": "Bookmark and AD Skipper Extensions",
   "description": "Bookmark and AD Skipper Extensions",
   "version": "1.0",
-  "manifest_version": 3,
-  "action": {
-    "default_title": "Bookmark and AD Skipper Extensions",
-    "default_popup": "./popup.html",
-    "default_icon": {
-      "16": "./images/icon-16.png",
-      "32": "./images/icon-32.png",
-      "48": "./images/icon-48.png",
-      "128": "./images/icon-128.png"
-    }
-  },
-  "content_scripts": {
-    "matches": "",
-    "js": "content_scripts.js"
-  },
+  "permissions": ["storage", "tabs"],
+  "host_permissions": ["https://*.youtube.com/*"],
   "background": {
-    "service-worker": "background.js"
+    "service_worker": "background.js"
   },
-  "web-accessible-resources": [
+  "content_scripts": [
+    {
+      "matches": ["https://*.youtube.com/*"],
+      "js": ["content_scripts.js"]
+    }
+  ],
+  "web_accessible_resources": [
     {
       "resources": [
-        "./images/add-bookmark.png",
-        "./images/check.png",
-        "./images/delete-bookmark.png",
-        "./images/play-button.png"
-        
+        "images/add-bookmark.png",
+        "images/check.png",
+        "images/delete-bookmark.png",
+        "images/play-button.png"
       ],
-      "matches": [
-        "https://*.youtube.com/*"
-      ]
+      "matches": ["https://*.youtube.com/*"]
     }
-  ]
+  ],
+  "action": {
+    "default_icon": {
+      "16": "images/icon-16.png",
+      "32": "images/icon-32.png",
+      "48": "images/icon-48.png",
+      "128": "images/icon-128.png"
+    },
+    "default_title": "Bookmark and AD Skipper Extensions",
+    "default_popup": "popup.html"
+  },
+  "manifest_version": 3
 }
